tree-sitter/test/corpus/paragraphs.txt
==================
Single line paragraph
==================
Hello world
---

(document
  (paragraph
    (text_line
      (line_content
        (text_content)))))

==================
Multi-line paragraph
==================
First line
Second line
---

(document
  (paragraph
    (text_line
      (line_content
        (text_content)))
    (text_line
      (line_content
        (text_content)))))

==================
Two paragraphs separated by blank line
==================
First paragraph

Second paragraph
---

(document
  (document_title
    title: (line_content
      (text_content))
    (blank_line))
  (paragraph
    (text_line
      (line_content
        (text_content)))))

==================
Multiple blank lines between paragraphs
==================
First paragraph


Second paragraph
---

(document
  (document_title
    title: (line_content
      (text_content))
    (blank_line))
  (blank_line)
  (paragraph
    (text_line
      (line_content
        (text_content)))))

==================
Two multi-line paragraphs separated by blank line
==================
First line
continues here.

Second paragraph.
---

; NOTE: tree-sitter parses two lines + blank as document_title+subtitle
; because it cannot check whether the first line ends with a colon.
; The lex-core parser correctly treats this as a multi-line paragraph.

(document
  (document_title
    title: (line_content
      (text_content))
    (document_subtitle
      subtitle: (line_content
        (text_content)))
    (blank_line))
  (paragraph
    (text_line
      (line_content
        (text_content)))))

==================
Paragraph with special characters
==================
Hello :: world :: test
---

(document
  (paragraph
    (text_line
      (line_content
        (text_content)))))
