tree-sitter/test/corpus/verbatim.txt
==================
Simple verbatim block
==================
Code:
    function hello() {}
:: javascript ::
---

(document
  (verbatim_block
    subject: (subject_content)
    (paragraph
      (text_line
        (line_content
          (text_content))))
    (annotation_marker)
    (annotation_header)
    (annotation_marker)))

==================
Verbatim with multiple content lines
==================
Code:
    line one
    line two
    line three
:: python ::
---

(document
  (verbatim_block
    subject: (subject_content)
    (paragraph
      (text_line
        (line_content
          (text_content)))
      (text_line
        (line_content
          (text_content)))
      (text_line
        (line_content
          (text_content))))
    (annotation_marker)
    (annotation_header)
    (annotation_marker)))

==================
Verbatim without content
==================
Photo:
:: image src=sunset.jpg ::
---

(document
  (verbatim_block
    subject: (subject_content)
    (annotation_marker)
    (annotation_header)
    (annotation_marker)))

==================
Verbatim with blank line after subject
==================
Code:

    function hello() {}
:: javascript ::
---

(document
  (verbatim_block
    subject: (subject_content)
    (paragraph
      (text_line
        (line_content
          (text_content))))
    (annotation_marker)
    (annotation_header)
    (annotation_marker)))

==================
Verbatim with parameters
==================
API Response:
    {"status": "ok"}
:: json format=pretty ::
---

(document
  (verbatim_block
    subject: (subject_content)
    (paragraph
      (text_line
        (line_content
          (text_content))))
    (annotation_marker)
    (annotation_header)
    (annotation_marker)))
